--- a/index.html
+++ b/index.html
@@ -45,6 +45,37 @@
       </div>
     </div>
     <!-- END JUMBOTRON -->
+    <!-- MENU -->
+    <div class="container-fluid menu-placeholder">
+      <div class="container p-5">
+        <h1 class="display-4 fw- text-center">Menu</h1>
+        <hr />
+        <div class="row">
+          <!-- table -->
+            <div class="col">
+                <table class="table table-striped">
+                <thead>
+                    <tr>
+                    <th scope="col">No</th>
+                    <th scope="col">Nama</th>
+                    <th scope="col">Harga</th>
+                    <th scope="col">Booth</th>
+                    <th scope="col">Bintang</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                    <th scope="row">1</th>
+                    <td>Es Teh</td>
+                    <td>Rp. 2.000</td>
+                    <td>Booth 1</td>
+                    <td>5/5</td>
+                    </tr>
+                </tbody>
+
+      </div>
+    </div>
+    <!-- END OF MENU -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </body>
 </html>
