--- a/index.html
+++ b/index.html
@@ -72,10 +72,16 @@
                     <td>5/5</td>
                     </tr>
                 </tbody>
-
+                </table>
+                </div>
       </div>
     </div>
     <!-- END OF MENU -->
+    <!-- DENAH -->
+    <div class="container p-5">
+        <h1 class="display-4 fw- text-center">Denah</h1>
+
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </body>
 </html>
