--- a/index.html
+++ b/index.html
@@ -1,87 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kantinku</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
-  </head>
-  <body>
-    <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg">
-      <div class="container p-2">
-        <a class="navbar-brand fw-bold" href="#">KANTINKU</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto me-5">
-            <li class="nav-item pe-3">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item pe-3">
-              <a class="nav-link" href="#">Menu</a>
-            </li>
-            <li class="nav-item pe-3">
-              <a class="nav-link" href="#">Booth</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <!-- END NAVBAR -->
-    <!-- JUMBOTRON -->
-    <div class="container-fluid jumbotron text-dark p-5">
-      <div class="container p-5">
-        <h1 class="display-4 fw-bold">KANTINKU</h1>
-        <hr />
-        <p>Kantin FILKOM Bermartabat</p>
-        <a href="#" class="btn btn-primary btn-jum">Lihat Menu</a>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Kantinku</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
+</head>
+
+<body>
+  <!-- NAVBAR -->
+  <nav class="navbar navbar-expand-lg">
+    <div class="container p-2">
+      <a class="navbar-brand fw-bold" href="#">KANTINKU</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto me-5">
+          <li class="nav-item pe-3">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item pe-3">
+            <a class="nav-link" href="#">Menu</a>
+          </li>
+          <li class="nav-item pe-3">
+            <a class="nav-link" href="#">Booth</a>
+          </li>
+        </ul>
       </div>
     </div>
-    <!-- END JUMBOTRON -->
-    <!-- MENU -->
-    <div class="container-fluid menu-placeholder">
-      <div class="container p-5">
-        <h1 class="display-4 fw- text-center">Menu</h1>
-        <hr />
-        <div class="row">
-          <!-- table -->
-            <div class="col">
-                <table class="table table-striped">
-                <thead>
-                    <tr>
-                    <th scope="col">No</th>
-                    <th scope="col">Nama</th>
-                    <th scope="col">Harga</th>
-                    <th scope="col">Booth</th>
-                    <th scope="col">Bintang</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                    <th scope="row">1</th>
-                    <td>Es Teh</td>
-                    <td>Rp. 2.000</td>
-                    <td>Booth 1</td>
-                    <td>5/5</td>
-                    </tr>
-                </tbody>
-                </table>
-                </div>
+  </nav>
+  <!-- END NAVBAR -->
+  <!-- JUMBOTRON -->
+  <div class="container-fluid jumbotron text-dark p-5">
+    <div class="container p-5">
+      <h1 class="display-4 fw-bold">KANTINKU</h1>
+      <hr />
+      <p>Kantin FILKOM Bermartabat</p>
+      <a href="#" class="btn btn-primary btn-jum">Lihat Menu</a>
+    </div>
+  </div>
+  <!-- END JUMBOTRON -->
+  <!-- MENU -->
+  <div class="container-fluid menu-placeholder">
+    <div class="container p-5">
+      <h1 class="display-4 fw- text-center">Menu</h1>
+      <hr />
+      <div class="row">
+        <!-- table -->
+        <div class="col">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th scope="col">No</th>
+                <th scope="col">Nama</th>
+                <th scope="col">Harga</th>
+                <th scope="col">Booth</th>
+                <th scope="col">Bintang</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">1</th>
+                <td>Es Teh</td>
+                <td>Rp. 2.000</td>
+                <td>Booth 1</td>
+                <td>5/5</td>
+              </tr>
+            </tbody>
+            <tbody>
+              <tr>
+                <th scope="row">2</th>
+                <td>Nasi Goreng</td>
+                <td>Rp. 10.000</td>
+                <td>Booth 1</td>
+                <td>5/5</td>
+              </tr>
+            </tbody>
+            <tbody>
+              <tr>
+                <th scope="row">3</th>
+                <td>Mie Ayam</td>
+                <td>Rp. 10.000</td>
+                <td>Booth 1</td>
+                <td>4/5</td>
+              </tr>
+            </tbody>
+            <tbody>
+              <tr>
+                <th scope="row">4</th>
+                <td>Tahu Telor</td>
+                <td>Rp. 11.000</td>
+                <td>Booth 2</td>
+                <td>4/5</td>
+              </tr>
+            </tbody>
+            <tbody>
+              <tr>
+                <th scope="row">5</th>
+                <td>Nasi Campur</td>
+                <td>Rp. 12.000</td>
+                <td>Booth 2</td>
+                <td>5/5</td>
+              </tr>
+            </tbody>
+            <tbody>
+              <tr>
+                <th scope="row">6</th>
+                <td>Aneka Mie</td>
+                <td>Rp. 5.000</td>
+                <td>Booth 3</td>
+                <td>3/5</td>
+              </tr>
+            </tbody>
+            <tbody>
+              <tr>
+                <th scope="row">7</th>
+                <td>Nasi Lalapan</td>
+                <td>Rp. 8.000</td>
+                <td>Booth 4</td>
+                <td>3/5</td>
+              </tr>
+            </tbody>
+            <tbody>
+              <tr>
+                <th scope="row">8</th>
+                <td>Nasi Ayam</td>
+                <td>Rp. 12.000</td>
+                <td>Booth 4</td>
+                <td>4/5</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
     <!-- END OF MENU -->
     <!-- DENAH -->
     <div class="container p-5">
-        <h1 class="display-4 fw- text-center">Denah</h1>
+      <h1 class="display-4 fw- text-center">Denah</h1>
 
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-  </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"></script>
+</body>
+
 </html>
