--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
       <h1 class="display-4 fw-bold">KANTINKU</h1>
       <hr />
       <p>Kantin FILKOM Bermartabat</p>
-      <a href="#" class="btn btn-primary btn-jum">Lihat Menu</a>
+      <a href="#menu" class="btn btn-primary btn-jum">Lihat Menu</a>
     </div>
   </div>
   <!-- END JUMBOTRON -->
   <!-- MENU -->
   <div class="container-fluid menu-placeholder">
     <div class="container p-5">
-      <h1 class="display-4 fw- text-center">Menu</h1>
+      <h1 class="display-4 fw- text-center" id="menu">Menu</h1>
       <hr />
       <div class="row">
         <!-- table -->
