add link to menu

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item pe-3">
-            <a class="nav-link" href="#">Menu</a>
+            <a class="nav-link" href="#menu">Menu</a>
           </li>
           <li class="nav-item pe-3">
             <a class="nav-link" href="#">Booth</a>
