--- a/index.html
+++ b/index.html
@@ -143,15 +143,46 @@
         </div>
       </div>
     </div>
-    <!-- END OF MENU -->
-    <!-- DENAH -->
-    <div class="container p-5">
-      <h1 class="display-4 fw- text-center">Denah</h1>
+  </div>
+  <!-- END OF MENU -->
+  <!-- DENAH -->
+  <div class="container p-5">
+    <h1 class="display-4 fw- text-center">Denah</h1>
+  </div>
 
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-      crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous">
+    </script>
+
+  <!-- Footer -->
+  <footer class="text-center text-lg-start p-5" style="position:absolut; background-color:rgba(217, 217, 217, 1)">
+    <!-- Section: Social media -->
+    <section>
+      <div class="" container"">
+        <div class="row">
+          <div class="col">
+            <h1 style="font-family: Inter;
+              font-style: normal; font-size: 25px;">KANTINKU</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur. Urna interdum risus volutpat urna viverra. Malesuada aliquet non
+              adipiscing orci. Tortor dictum sed vitae sit maecenas arcu massa. Tristique ut tellus orci cursus vitae.
+              Rutrum hac tortor augue neque quis.
+            </p>
+          </div>
+          <div class="col" style="text-align: right; direction: rtl; font-family: Inter;
+          font-style: normal;">
+            <ul>
+              <li>@dawdawdaw</li>
+              <li>@dawdawdaw</li>
+              <li>@wdadawdawdaw</li>
+              <li>@dwadawdawdaw</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+  </footer>
+  <!-- Footer -->
 </body>
+
 
 </html>
