--- a/Keranjang.html
+++ b/Keranjang.html
@@ -1,19 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Keranjang</title>
     <link rel="stylesheet" href="asset/css/style.css">
+    <link rel="stylesheet" href="asset/css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
     <!-- <link rel="stylesheet" href="asset/css/responsive.css"> -->
 </head>
+
 <body>
-    <div class="main">  
+    <nav class="navbar navbar-expand-lg"style="background-color:#EC831E !important;">
+        <div class="container p-2">
+            <a class="navbar-brand fw-bold" href="#">KANTINKU</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto me-5">
+                    <li class="nav-item pe-3">
+                        <a class="nav-link" aria-current="page" href="index.html#">Home</a>
+                    </li>
+                    <li class="nav-item pe-3">
+                        <a class="nav-link" href="index.html#menu">Menu</a>
+                    </li>
+                    <li class="nav-item pe-3">
+                        <a class="nav-link" href="index.html#booth">Booth</a>
+                    </li>
+                    <li class="nav-item pe-3">
+                        <a class="nav-link active" href="#">Keranjang</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="main">
         <div class="section-title">
             <h2>Keranjang</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis, unde?</p>
-            
+
         </div>
 
         <section id="cart-container">
@@ -29,17 +62,17 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td class="nama-content">                    
+                        <td class="nama-content">
                             <img src="asset/img/SegoGoreng.jpg" alt="">
                             <h4>Food Title 1
-                                <p>Nama Booth 1</p>   
-                            </h4> 
-                            
+                                <p>Nama Booth 1</p>
+                            </h4>
+
                         </td>
                         <td class="harga-content">
                             <h4>15K</h4>
                         </td>
-                        <td class="jumlah-content"> 
+                        <td class="jumlah-content">
                             <h4><input value="1" type="number"></h4>
                         </td>
                         <td class="harga-content">
@@ -51,26 +84,26 @@
                     </tr>
                     <!-- No 2 -->
                     <tr>
-                        <td class="nama-content">                    
+                        <td class="nama-content">
                             <img src="asset/img/SegoGoreng.jpg" alt="">
                             <h4>
                                 Food Title 2
-                                <p>Nama Booth 2</p>   
-                            </h4>                           
+                                <p>Nama Booth 2</p>
+                            </h4>
                         </td>
                         <td class="harga-content">
                             <h4>15K</h4>
                         </td>
-                        <td class="jumlah-content"> 
+                        <td class="jumlah-content">
                             <h4><input value="1" type="number"></h4>
                         </td>
                         <td class="harga-content">
                             <h4>30K</h4>
                         </td>
-                        <td class="remove-content"> 
+                        <td class="remove-content">
                             <a href="#"><i class="trash-alt"> x </i></a>
                         </td>
-                    </tr>    
+                    </tr>
                 </tbody>
             </table>
 
@@ -84,7 +117,8 @@
                     </button>
                 </span>
             </h4>
-        </section>       
+        </section>
     </div>
 </body>
+
 </html>
