--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Kantinku</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="asset/css/style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet" />
@@ -16,8 +16,9 @@
 
 <body>
   <!-- NAVBAR -->
-  <nav class="navbar navbar-expand-lg">
-    <div class="container p-2">
+
+  <nav class="navbar navbar-expand-lg" style="background-color:#EC831E !important;">
+    <div class=" container p-2">
       <a class="navbar-brand fw-bold" href="#">KANTINKU</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,10 +35,14 @@
           <li class="nav-item pe-3">
             <a class="nav-link" href="#">Booth</a>
           </li>
+          <li class="nav-item pe-3">
+            <a class="nav-link" href="keranjang.html#">Keranjang</a>
+          </li>
         </ul>
       </div>
     </div>
   </nav>
+
   <!-- END NAVBAR -->
   <!-- JUMBOTRON -->
   <div class="container-fluid jumbotron text-dark p-5">
@@ -50,11 +55,11 @@
   </div>
   <!-- END JUMBOTRON -->
   <!-- MENU -->
-  <div class="container-fluid menu-placeholder">
+  <div class="container-fluid menu-placeholder" style="background-color:#002647 !important;">
     <div class="container p-5">
-      <h1 class="display-4 fw- text-center" id="menu">Menu</h1>
+      <h1 class="display-4 fw- text-center" id="menu" style="background-color: #EC831E ;">Menu</h1>
       <hr />
-      <div class="row">
+      <div class="row" style="background-color: #ffffff ;">
         <!-- table -->
         <div class="col">
           <table class="table table-striped">
@@ -155,15 +160,16 @@
     </script>
 
   <!-- Footer -->
-  <footer class="text-center text-lg-start p-5" style="position:absolut; background-color:rgba(217, 217, 217, 1)">
+  <footer class="text-center text-lg-start p-5" style="position:absolut; background-color:#002647">
     <!-- Section: Social media -->
     <section>
       <div class="" container"">
         <div class="row">
           <div class="col">
             <h1 style="font-family: Inter;
+            color: #ffffff;
               font-style: normal; font-size: 25px;">KANTINKU</h1>
-            <p>
+            <p style="color: #ffffff;">
               Lorem ipsum dolor sit amet consectetur. Urna interdum risus volutpat urna viverra. Malesuada aliquet non
               adipiscing orci. Tortor dictum sed vitae sit maecenas arcu massa. Tristique ut tellus orci cursus vitae.
               Rutrum hac tortor augue neque quis.
