--- a/index.html
+++ b/index.html
@@ -19,24 +19,24 @@
 
   <nav class="navbar navbar-expand-lg" style="background-color:#EC831E !important;">
     <div class=" container p-2">
-      <a class="navbar-brand fw-bold" href="#">KANTINKU</a>
+      <a class="navbar-brand fw-bold" style="color:#ffffff !important;" href="#">KANTINKU</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto me-5">
-          <li class="nav-item pe-3">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+        <ul class="navbar-nav ms-auto me-5 fw-light">
+          <li class="nav-item pe-3" >
+            <a class="nav-link" style="color:#ffffff !important;"  aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item pe-3">
-            <a class="nav-link" href="#menu">Menu</a>
+            <a class="nav-link" style="color:#ffffff !important;" href="#menu">Menu</a>
           </li>
           <li class="nav-item pe-3">
-            <a class="nav-link" href="#">Booth</a>
+            <a class="nav-link" style="color:#ffffff !important;" href="#denah">Denah</a>
           </li>
           <li class="nav-item pe-3">
-            <a class="nav-link" href="keranjang.html#">Keranjang</a>
+            <a class="nav-link" style="color:#ffffff !important;" href="keranjang.html#">Keranjang</a>
           </li>
         </ul>
       </div>
@@ -50,16 +50,16 @@
       <h1 class="display-4 fw-bold">KANTINKU</h1>
       <hr />
       <p>Kantin FILKOM Bermartabat</p>
-      <a href="#menu" class="btn btn-primary btn-jum">Lihat Menu</a>
+      <a href="#menu" class="btn btn-primary btn-jum" style="border:none;background-color: #EC831E !important;">Lihat Menu</a>
     </div>
   </div>
   <!-- END JUMBOTRON -->
   <!-- MENU -->
   <div class="container-fluid menu-placeholder" style="background-color:#002647 !important;">
     <div class="container p-5">
-      <h1 class="display-4 fw- text-center" id="menu" style="background-color: #EC831E ;">Menu</h1>
+      <h1 class="display-4 fw-bold text-center" id="menu" style="color:#ffffff;">Menu</h1>
       <hr />
-      <div class="row" style="background-color: #ffffff ;">
+      <div class="row" style="background-color: #ffffff ;border-radius: 10px;     ">
         <!-- table -->
         <div class="col">
           <table class="table table-striped">
@@ -69,7 +69,7 @@
                 <th scope="col">Nama</th>
                 <th scope="col">Harga</th>
                 <th scope="col">Booth</th>
-                <th scope="col">Bintang</th>
+                <th scope="col">Pilih</th>
               </tr>
             </thead>
             <tbody>
@@ -78,7 +78,7 @@
                 <td>Es Teh</td>
                 <td>Rp. 2.000</td>
                 <td>Booth 1</td>
-                <td>5/5</td>
+                <td><a href="#menu" class="btn btn-primary btn-sm" style="border:none;background-color: #EC831E !important;">Pilih</a></td>
               </tr>
             </tbody>
             <tbody>
@@ -87,7 +87,7 @@
                 <td>Nasi Goreng</td>
                 <td>Rp. 10.000</td>
                 <td>Booth 1</td>
-                <td>5/5</td>
+                <td><a href="#menu" class="btn btn-primary btn-sm" style="border:none;background-color: #EC831E !important;">Pilih</a></td>
               </tr>
             </tbody>
             <tbody>
@@ -96,7 +96,7 @@
                 <td>Mie Ayam</td>
                 <td>Rp. 10.000</td>
                 <td>Booth 1</td>
-                <td>4/5</td>
+                <td><a href="#menu" class="btn btn-primary btn-sm" style="border:none;background-color: #EC831E !important;">Pilih</a></td>
               </tr>
             </tbody>
             <tbody>
@@ -105,7 +105,7 @@
                 <td>Tahu Telor</td>
                 <td>Rp. 11.000</td>
                 <td>Booth 2</td>
-                <td>4/5</td>
+                <td><a href="#menu" class="btn btn-primary btn-sm" style="border:none;background-color: #EC831E !important;">Pilih</a></td>
               </tr>
             </tbody>
             <tbody>
@@ -114,7 +114,7 @@
                 <td>Nasi Campur</td>
                 <td>Rp. 12.000</td>
                 <td>Booth 2</td>
-                <td>5/5</td>
+                <td><a href="#menu" class="btn btn-primary btn-sm" style="border:none;background-color: #EC831E !important;">Pilih</a></td>
               </tr>
             </tbody>
             <tbody>
@@ -123,7 +123,7 @@
                 <td>Nasi Lalapan</td>
                 <td>Rp. 8.000</td>
                 <td>Booth 3</td>
-                <td>3/5</td>
+                <td><a href="#menu" class="btn btn-primary btn-sm" style="border:none;background-color: #EC831E !important;">Pilih</a></td>
               </tr>
             </tbody>
             <tbody>
@@ -132,7 +132,7 @@
                 <td>Nasi Ayam</td>
                 <td>Rp. 12.000</td>
                 <td>Booth 3</td>
-                <td>4/5</td>
+                <td><a href="#menu" class="btn btn-primary btn-sm" style="border:none;background-color: #EC831E !important;">Pilih</a></td>
               </tr>
             <tbody>
               <tr>
@@ -140,7 +140,7 @@
                 <td>Aneka Mie</td>
                 <td>Rp. 5.000</td>
                 <td>Booth 4</td>
-                <td>3/5</td>
+                <td><a href="#menu" class="btn btn-primary btn-sm" style="border:none;background-color: #EC831E !important;">Pilih</a></td>
               </tr>
             </tbody>
             </tbody>
@@ -151,8 +151,8 @@
   </div>
   <!-- END OF MENU -->
   <!-- DENAH -->
-  <div class="container p-5">
-    <h1 class="display-4 fw- text-center">Denah</h1>
+  <div class="container p-5" id="denah">
+    <h1 class="display-4 fw-bold text-center">Denah</h1>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
@@ -163,25 +163,21 @@
   <footer class="text-center text-lg-start p-5" style="position:absolut; background-color:#002647">
     <!-- Section: Social media -->
     <section>
-      <div class="" container"">
+      <div class="container">
         <div class="row">
           <div class="col">
-            <h1 style="font-family: Inter;
-            color: #ffffff;
-              font-style: normal; font-size: 25px;">KANTINKU</h1>
-            <p style="color: #ffffff;">
+            <h1 class="fw-bold" style="color: #ffffff; font-size: 25px; text-align: left;">KANTINKU</h1>
+            <p class="fw-light" style="color: #ffffff; text-align: left;">
               Lorem ipsum dolor sit amet consectetur. Urna interdum risus volutpat urna viverra. Malesuada aliquet non
               adipiscing orci. Tortor dictum sed vitae sit maecenas arcu massa. Tristique ut tellus orci cursus vitae.
               Rutrum hac tortor augue neque quis.
             </p>
           </div>
-          <div class="col" style="text-align: right; direction: rtl; font-family: Inter;
-          font-style: normal;">
+          <div class="col" style="text-align: right; direction: rtl;">
             <ul>
-              <li>@dawdawdaw</li>
-              <li>@dawdawdaw</li>
-              <li>@wdadawdawdaw</li>
-              <li>@dwadawdawdaw</li>
+              <li>Aditya Rizky Ramadhan</li>
+              <li>Muhammad Ubaidillah</li>
+              <li>Sulthan Abiyyu Hakim</li>
             </ul>
           </div>
         </div>
