--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
   <!-- JUMBOTRON -->
   <div class="container-fluid jumbotron text-dark p-5">
     <div class="container p-5">
-      <h1 class="display-4 fw-bold">KANTINKU</h1>
+      <h1 style="color: #ffffff" class="display-2 fw-bold">KANTINKU</h1>
       <hr />
-      <p>Kantin FILKOM Bermartabat</p>
+      <p style="color:#ffffff">Kantin FILKOM Bermartabat</p>
       <a href="#menu" class="btn btn-primary btn-jum" style="border:none;background-color: #EC831E !important;">Lihat Menu</a>
     </div>
   </div>
@@ -176,8 +176,13 @@
           <div class="col" style="text-align: right; direction: rtl;">
             <ul>
               <li>Aditya Rizky Ramadhan</li>
+              <li>215150201111007</li>
+              <br>
               <li>Muhammad Ubaidillah</li>
+              <li>215150201111010</li>
+              <br>
               <li>Sulthan Abiyyu Hakim</li>
+              <li>215150201111011</li>
             </ul>
           </div>
         </div>
