--- a/Keranjang.html
+++ b/Keranjang.html
@@ -42,7 +42,7 @@
     <div class="main">
       <div class="section-title">
         <h2>Keranjang</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis, unde?</p>
+        <p>Berikut adalah estimasi harga yang perlu dibayar di kantin:</p>
       </div>
 
       <section id="cart-container">
