--- a/index.html
+++ b/index.html
@@ -175,13 +175,13 @@
           </div>
           <div class="col" style="text-align: right; direction: rtl;">
             <ul>
-              <li>Aditya Rizky Ramadhan</li>
+              <li class="fw-bold">Aditya Rizky Ramadhan</li>
               <li>215150201111007</li>
               <br>
-              <li>Muhammad Ubaidillah</li>
+              <li class="fw-bold">Muhammad Ubaidillah</li>
               <li>215150201111010</li>
               <br>
-              <li>Sulthan Abiyyu Hakim</li>
+              <li class="fw-bold">Sulthan Abiyyu Hakim</li>
               <li>215150201111011</li>
             </ul>
           </div>
