--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <td>Es Teh</td>
                 <td>Rp. 2.000</td>
                 <td>Booth 1</td>
-                <td><a href="#menu" class="btn btn-primary btn-sm" style="border:none;background-color: #EC831E !important;">Pilih</a></td>
+                <td><a href="#menu" class="btn btn-primary btn-sm" style="border:none;background-color: #EC831E !important;">✔</a></td>
               </tr>
             </tbody>
             <tbody>
@@ -87,7 +87,7 @@
                 <td>Nasi Goreng</td>
                 <td>Rp. 10.000</td>
                 <td>Booth 1</td>
-                <td><a href="#menu" class="btn btn-primary btn-sm" style="border:none;background-color: #EC831E !important;">Pilih</a></td>
+                <td><a href="#menu" class="btn btn-primary btn-sm" style="border:none;background-color: #EC831E !important;">✔</a></td>
               </tr>
             </tbody>
             <tbody>
@@ -96,7 +96,7 @@
                 <td>Mie Ayam</td>
                 <td>Rp. 10.000</td>
                 <td>Booth 1</td>
-                <td><a href="#menu" class="btn btn-primary btn-sm" style="border:none;background-color: #EC831E !important;">Pilih</a></td>
+                <td><a href="#menu" class="btn btn-primary btn-sm" style="border:none;background-color: #EC831E !important;">✔</a></td>
               </tr>
             </tbody>
             <tbody>
@@ -105,7 +105,7 @@
                 <td>Tahu Telor</td>
                 <td>Rp. 11.000</td>
                 <td>Booth 2</td>
-                <td><a href="#menu" class="btn btn-primary btn-sm" style="border:none;background-color: #EC831E !important;">Pilih</a></td>
+                <td><a href="#menu" class="btn btn-primary btn-sm" style="border:none;background-color: #EC831E !important;">✔</a></td>
               </tr>
             </tbody>
             <tbody>
@@ -114,7 +114,7 @@
                 <td>Nasi Campur</td>
                 <td>Rp. 12.000</td>
                 <td>Booth 2</td>
-                <td><a href="#menu" class="btn btn-primary btn-sm" style="border:none;background-color: #EC831E !important;">Pilih</a></td>
+                <td><a href="#menu" class="btn btn-primary btn-sm" style="border:none;background-color: #EC831E !important;">✔</a></td>
               </tr>
             </tbody>
             <tbody>
@@ -123,7 +123,7 @@
                 <td>Nasi Lalapan</td>
                 <td>Rp. 8.000</td>
                 <td>Booth 3</td>
-                <td><a href="#menu" class="btn btn-primary btn-sm" style="border:none;background-color: #EC831E !important;">Pilih</a></td>
+                <td><a href="#menu" class="btn btn-primary btn-sm" style="border:none;background-color: #EC831E !important;">✔</a></td>
               </tr>
             </tbody>
             <tbody>
@@ -132,7 +132,7 @@
                 <td>Nasi Ayam</td>
                 <td>Rp. 12.000</td>
                 <td>Booth 3</td>
-                <td><a href="#menu" class="btn btn-primary btn-sm" style="border:none;background-color: #EC831E !important;">Pilih</a></td>
+                <td><a href="#menu" class="btn btn-primary btn-sm" style="border:none;background-color: #EC831E !important;">✔</a></td>
               </tr>
             <tbody>
               <tr>
@@ -140,7 +140,7 @@
                 <td>Aneka Mie</td>
                 <td>Rp. 5.000</td>
                 <td>Booth 4</td>
-                <td><a href="#menu" class="btn btn-primary btn-sm" style="border:none;background-color: #EC831E !important;">Pilih</a></td>
+                <td><a href="#menu" class="btn btn-primary btn-sm" style="border:none;background-color: #EC831E !important;">✔</a></td>
               </tr>
             </tbody>
             </tbody>
@@ -153,6 +153,11 @@
   <!-- DENAH -->
   <div class="container p-5" id="denah">
     <h1 class="display-4 fw-bold text-center">Denah</h1>
+    <!-- insert image -->
+    <div class="text-center">
+
+      <img class="img-fluid" src="./asset/img/denah.jpeg" alt="denah" style="width: 700px;">
+    </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
